Banner scetion done

--- a/index.html
+++ b/index.html
@@ -20,10 +20,77 @@
 <body>
   <!--container start-->
   <div class="container">
+      <!-- Header start -->
     <header>
+      <!-- Wrapper start -->
+      <div class="wrapper">
+        
+      </div>
+      <!-- Wrapper end -->
     </header>
+    <!-- Header end -->
+    <!-- Main start -->
     <main>
+      <!-- Banner sections start -->
+      <section class="banner">
+        <!-- Wrapper start -->
+        <div class="wrapper">
+          <!-- Banner top start -->
+          <div class="banner-top">
+            <!-- Banner content start -->
+            <div class="banner-content">
+              <h2>Get Weather Forecast & Radar for FREE</h2>
+              <p>Also, enjoy convenient access to web search.</p>
+              <!-- Form wrap start -->
+              <div class="form-wrap">
+                <form method="POST" action="#FIXME">
+                  <div class="form-group">
+                    <input type="text" name="city">
+                  </div>
+                  <input type="submit" name="CONTINUE">
+                </form>
+              </div>
+              <!-- Form wrap end -->
+            </div>
+            <!-- Banner content end -->
+            <!-- Figure start -->
+            <figure>
+              <img src="assets/images/weather.png" alt="New York Weather">
+            </figure>
+            <!-- Figure end -->
+          </div>
+          <!-- Banner top end -->
+          <!-- Banner bottom start -->
+          <div class="banner-bottom">
+            <span>Click “Continue” to safely download from the Chrome™ Web Store</span>
+            <ul>
+              <li>
+                <figure>
+                  <img src="assets/images/one.svg" alt="One">
+                </figure>
+                <span>Click ‘Continue’</span>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/two.svg" alt="One">
+                </figure>
+                <span>Click “Add to Chrome”</span>
+              </li>
+              <li>
+                <figure>
+                  <img src="assets/images/three.svg" alt="One">
+                </figure>
+                <span>Get free Weather Forecast</span>
+              </li>
+            </ul>
+          </div>
+          <!-- Banner bottom end -->
+        </div>
+        <!-- Wrapper end -->
+      </section>
+      <!-- Banner section end -->
     </main>
+    <!-- Main end -->
     <footer>
     </footer>
   </div>
