Footer structure done with links

--- a/index.html
+++ b/index.html
@@ -91,8 +91,33 @@
       <!-- Banner section end -->
     </main>
     <!-- Main end -->
+    <!-- Footer start -->
     <footer>
+      <!-- Wrapper start -->
+      <div class="wrapper">
+        <!-- Footer link strat -->
+        <ul class="footer-links">
+          <li>
+            <a href="#FIXME" title="Privacy Policy">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="#FIXME" title="EULA">EULA</a>
+          </li>
+          <li>
+            <a href="#FIXME" title="Endorsement Disclaimer and DMCA Policy">Endorsement Disclaimer and DMCA Policy</a>
+          </li>
+          <li>
+            <a href="#FIXME" title="Contact Us">Contact Us</a>
+          </li>
+          <li>
+            <a href="#FIXME" title="Uninstall">Uninstall</a>
+          </li>
+        </ul>
+        <!-- Footer links end -->
+      </div>
+      <!-- Wrapper end -->
     </footer>
+    <!-- Footer end -->
   </div>
   <!--container end-->
 
