--- a/index.html
+++ b/index.html
@@ -35,60 +35,63 @@
       <section class="banner">
         <!-- Wrapper start -->
         <div class="wrapper">
-          <!-- Banner top start -->
-          <div class="banner-top">
-            <!-- Banner content start -->
-            <div class="banner-content">
-              <h2>Get Weather Forecast & Radar for FREE</h2>
-              <p>Also, enjoy convenient access to web search.</p>
-              <!-- Form wrap start -->
-              <div class="form-wrap">
-                <form method="POST" action="#FIXME">
-                  <div class="form-group">
-                    <input type="text" name="city">
-                  </div>
-                  <input type="submit" name="CONTINUE">
-                </form>
-              </div>
-              <!-- Form wrap end -->
+          <!-- Banner content start -->
+          <div class="banner-content">
+            <h2>Get Weather Forecast & Radar for FREE</h2>
+            <p>Also, enjoy convenient access to web search.</p>
+            <!-- Form wrap start -->
+            <div class="form-wrap">
+              <form method="POST" action="#FIXME">
+                <label>Enter a Zip Code, City or Place and get started.</label>
+                <div class="form-group">
+                  <input type="text" name="city" placeholder="Mumbai, IN" class="text">
+                </div>
+                <input type="submit" value="CONTINUE" class="submit">
+              </form>
             </div>
-            <!-- Banner content end -->
-            <!-- Figure start -->
-            <figure>
-              <img src="assets/images/weather.png" alt="New York Weather">
-            </figure>
-            <!-- Figure end -->
+            <!-- Form wrap end -->
           </div>
-          <!-- Banner top end -->
-          <!-- Banner bottom start -->
-          <div class="banner-bottom">
-            <span>Click “Continue” to safely download from the Chrome™ Web Store</span>
-            <ul>
-              <li>
-                <figure>
-                  <img src="assets/images/one.svg" alt="One">
-                </figure>
-                <span>Click ‘Continue’</span>
-              </li>
-              <li>
-                <figure>
-                  <img src="assets/images/two.svg" alt="One">
-                </figure>
-                <span>Click “Add to Chrome”</span>
-              </li>
-              <li>
-                <figure>
-                  <img src="assets/images/three.svg" alt="One">
-                </figure>
-                <span>Get free Weather Forecast</span>
-              </li>
-            </ul>
-          </div>
-          <!-- Banner bottom end -->
+          <!-- Banner content end -->
+          <!-- Figure start -->
+          <figure>
+            <img src="assets/images/weather.png" alt="New York Weather">
+          </figure>
+          <!-- Figure end -->
         </div>
         <!-- Wrapper end -->
       </section>
       <!-- Banner section end -->
+      <!-- Download start -->
+      <section class="download">
+        <!-- Wrapper start -->
+        <div class="wrapper">
+          <p>Click “Continue” to safely download from the Chrome™ Web Store</p>
+          <ul>
+            <li>
+              <figure>
+                <img src="assets/images/one.svg" alt="One">
+              </figure>
+              <span>Click ‘Continue’</span>
+              <img src="assets/images/arrow.svg" class="arrow" alt="Arrow">
+            </li>
+            <li>
+              <figure>
+                <img src="assets/images/two.svg" alt="One">
+              </figure>
+              <span>Click “Add to Chrome”</span>
+              <img src="assets/images/arrow.svg" class="arrow" alt="Arrow">
+            </li>
+            <li>
+              <figure>
+                <img src="assets/images/three.svg" alt="One">
+              </figure>
+              <span>Get free Weather Forecast</span>
+            </li>
+          </ul>
+        </div>
+        <!-- Wrapper end -->
+      </section>
+      <!-- Download end -->
     </main>
     <!-- Main end -->
     <!-- Footer start -->
