Styling is done for all device

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
           </li>
         </ul>
         <!-- Footer links end -->
+        <div class="to-the-top">
+          <img src="assets/images/to-top.png" alt="to-the-top">
+        </div>
       </div>
       <!-- Wrapper end -->
     </footer>
