For different browser different popup is added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
                 <div class="form-group">
                   <input type="text" name="city" placeholder="Mumbai, IN" class="text">
                 </div>
-                <input type="submit" value="CONTINUE" class="submit">
+                <input type="submit" value="CONTINUE" class="submit" id="show-popup">
               </form>
+              <div class="popup-wrap" id="popup">
+                <p id="popup-text">Thank you for downloading.</p>
+                <button id="close">Close Popup</button>
+              </div>
             </div>
             <!-- Form wrap end -->
           </div>
