--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <input type="submit" value="CONTINUE" class="submit" id="show-popup">
               </form>
               <div class="popup-wrap" id="popup">
-                <p id="popup-text">Thank you for downloading.</p>
+                <p id="popup-text">Thank you for downloading  :)</p>
                 <button id="close">Close Popup</button>
               </div>
             </div>
@@ -121,7 +121,7 @@
           </li>
         </ul>
         <!-- Footer links end -->
-        <div class="to-the-top">
+        <div class="to-the-top" id="top">
           <img src="assets/images/to-top.png" alt="to-the-top">
         </div>
       </div>
