Arrow is added in continue buttton

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 <div class="form-group">
                   <input type="text" name="city" placeholder="Mumbai, IN" class="text">
                 </div>
-                <input type="submit" value="CONTINUE" class="submit" id="show-popup">
+                <div class="submit-form-group">
+                  <input type="submit" value="CONTINUE" class="submit" id="show-popup">
+                  <span><img src="assets/images/white-arrow.svg" alt="White arrow"></span>
+                </div>
               </form>
               <div class="popup-wrap" id="popup">
                 <p id="popup-text">Thank you for downloading  :)</p>
