Done with script

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
 <html lang="en"> 
-
-<head>
- 
+<head> 
   <meta charset="utf-8">
 
   <title>Get Weather Forecast</title>
@@ -24,7 +22,7 @@
     <header>
       <!-- Wrapper start -->
       <div class="wrapper">
-        
+        <!-- All header  realted content will implement here Ex. Logo, links, search          -->
       </div>
       <!-- Wrapper end -->
     </header>
