VAlidation is aaplied on input

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
               <form method="POST" action="#FIXME">
                 <label>Enter a Zip Code, City or Place and get started.</label>
                 <div class="form-group">
-                  <input type="text" name="city" placeholder="Mumbai, IN" class="text">
+                  <input type="text" name="city" placeholder="Mumbai, IN" id="city" class="text">
+                  <span id="error"></span>
                 </div>
                 <div class="submit-form-group">
                   <input type="submit" value="CONTINUE" class="submit" id="show-popup">
